After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697277 - SDP library does not include timing line if there is not timing information
SDP library does not include timing line if there is not timing information
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
1.0.6
Other Linux
: Normal normal
: 1.0.7
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-04 14:46 UTC by Jose Antonio Santos Cadenas
Modified: 2013-04-05 07:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to solve the explained issue (1.93 KB, patch)
2013-04-04 14:46 UTC, Jose Antonio Santos Cadenas
none Details | Review

Description Jose Antonio Santos Cadenas 2013-04-04 14:46:10 UTC
Created attachment 240616 [details] [review]
Patch to solve the explained issue

If you generate a GstSDPMessage and you do not add any time calling to gst_sdp_message_add_time the text generated by gst_sdp_message_as_text does not contain a "t=" line. I think that it should add a default line indicating that session is permanent (ie: t=0 0) because rfc4566 does not indicate that the timing line is optional.

I attach a patch that implements this functionality.
Comment 1 Jose Antonio Santos Cadenas 2013-04-04 14:46:56 UTC
The patch is applicable to master and 1.0 branches.
Comment 2 Wim Taymans 2013-04-05 07:57:26 UTC
commit a83f96d988bfc323251046f11f1f517a128be2ef
Author: Jose Antonio Santos Cadenas <santoscadenas@gmail.com>
Date:   Thu Apr 4 16:32:45 2013 +0200

    sdp: Set session as permanent (t=0 0) if there is no time information
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=697277