sdp: Set session as permanent (t=0 0) if there is no time information

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=697277